--- a/react-weather-app-master/.gitignore
+++ b/react-weather-app-master/.gitignore
@@ -1,18 +1,17 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
 /node_modules
 /.pnp
 .pnp.js
 package-lock.json
+README.md
+weather.gif
 
-# testing
+
 /coverage
 
-# production
+
 /build
 
-# misc
 .DS_Store
 .env.local
 .env.development.local
